--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run dev\" \"npm run dev-watch\" \"nodemon server.js\"",
+    "start": "node server.js",
     "dev": "webpack-dev-server --hot --inline",
     "dev-watch": "webpack --watch",
     "build": "webpack --mode=production"
